@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3157 2019/07/31 18:34:10 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3158 2019/07/31 18:36:26 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5114,3 +5114,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-DAAG to 1.22.1 [brook 2019-07-31]
 	Updated math/R-FNN to 1.1.3 [brook 2019-07-31]
 	Updated math/R-RandomFields to 3.3.6 [brook 2019-07-31]
+	Updated math/R-Rcmdr to 2.5.3 [brook 2019-07-31]
